# ExtenSer

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: cmake_test.yml
adapters/bitsery/: extenser_bitsery.hpp
adapters/json/: extenser_json.hpp
cmake/: CodeCoverage.cmake
extras/bitsery_adapter/: CMakeLists.txt
extras/bitsery_adapter/include/: extenser_bitsery.hpp
extras/bitsery_adapter/tests/: CMakeLists.txt  bitsery.test.cpp
include/: extenser.hpp
include/container_adapters/: array.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  set.hpp  span.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
include/extenser/: extenser.hpp  span.hpp
include/extenser/containers/: all.hpp  array.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  queue.hpp  set.hpp  span.hpp  stack.hpp  string.hpp  string_view.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
include/extenser/detail/: macros.hpp  type_traits.hpp
include/extenser/ext/: atomic.hpp  bitset.hpp  chrono.hpp  complex.hpp  exception.hpp  filesystem.hpp
include/extenser/json_adapter/: extenser_json.hpp
tests/: CMakeLists.txt  json.deser.test.cpp  json.ser.test.cpp  json.test.cpp  json.test.hpp  json_deser.test.cpp  main.cpp  test_helpers.hpp  test_main.cpp  test_runner.cpp
tests/json_adapter/: json.deser.test.cpp  json.ser.test.cpp
